# xstream

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  eslint.config.js  install.sh  mediaFiles.json  mprocs.yaml  package.json
.claude/: settings.json
.claude/agents/: architect.md  browse.md  devops.md  inspect-seq.md  migrations-lead.md
.claude/commands/: create-pr.md  debug-backend.md  debug-ui.md  e2e_test.md  implement-design.md  resolve-comments.md  test.md  todo.md  write-component.md
.claude/screenshots/: 01-homepage-snapshot.md  02-film-details-overlay.md
.claude/skills/axiom/: SKILL.md
.claude/skills/browser/: SKILL.md
.claude/skills/check-env/: SKILL.md
.claude/skills/clean/: SKILL.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/debug-backend/: SKILL.md
.claude/skills/debug-ui/: SKILL.md
.claude/skills/dev/: SKILL.md
.claude/skills/e2e-test/: SKILL.md
.claude/skills/feature-flags/: SKILL.md
.claude/skills/format/: SKILL.md
.claude/skills/groom-knowledge-base/: SKILL.md
.claude/skills/implement-design/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/otel-logs/: SKILL.md
.claude/skills/reflect/: SKILL.md
.claude/skills/resolve-comments/: SKILL.md
.claude/skills/seq/: SKILL.md
.claude/skills/seq-start/: SKILL.md
.claude/skills/seq-stop/: SKILL.md
.claude/skills/setup-local/: SKILL.md
.claude/skills/stop/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/todo/: SKILL.md
.claude/skills/update-docs/: SKILL.md
.claude/skills/write-component/: SKILL.md
.github/workflows/: ci.yml
client/: eslint.config.js  index.html  package.json  relay.config.json  rsbuild.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.storybook.config.ts
client/.storybook/: main.ts  preview.tsx  vitest.setup.ts
client/src/: events.ts  lazy-pages.ts  main.tsx  router.tsx  telemetry.ts  types.ts
client/src/components/: AppHeader.stories.tsx  AppHeader.tsx  ControlBar.stories.tsx  ControlBar.tsx  LibraryGrid.stories.tsx  LibraryGrid.tsx  LibraryRail.events.ts  LibraryRail.stories.tsx  LibraryRail.tsx  MediaGridItem.stories.tsx  MediaGridItem.tsx  MediaList.events.ts  MediaList.stories.tsx  MediaList.tsx  MediaListItem.stories.tsx  MediaListItem.tsx  PlayerSidebar.stories.tsx  PlayerSidebar.tsx  PlayerSidebarAsync.tsx  ProfilesSidebar.stories.tsx  ProfilesSidebar.tsx  VideoCard.stories.tsx  VideoCard.tsx  VideoDetailsPanel.stories.tsx  VideoDetailsPanel.tsx  VideoDetailsPanelAsync.tsx  VideoPlayer.stories.tsx  VideoPlayer.tsx  VideoPlayerAsync.tsx
client/src/config/: appConfig.ts  featureFlags.ts  flagRegistry.ts  rustOrigin.ts
client/src/contexts/: FeatureFlagsContext.tsx
client/src/hooks/: useChunkedPlayback.ts  useJobSubscription.ts  useSplitResize.ts  useVideoPlayback.ts  useVideoSync.ts
client/src/lib/: icons.tsx
client/src/pages/: DashboardPage.styles.ts  DashboardPage.tsx  DashboardPageContent.tsx  LibraryContent.tsx  LibraryPage.styles.ts  LibraryPage.tsx  LibraryPageContent.tsx  NotFoundPage.tsx  PlayerPage.tsx  ProfilesPage.tsx  ProfilesPageContent.tsx  SetupPage.tsx  SetupPageContent.tsx  WatchlistPage.tsx
client/src/relay/: environment.ts
client/src/services/: BufferManager.ts  ChunkPipeline.ts  PlaybackController.ts  StallTracker.ts  StreamingLogger.ts  StreamingService.test.ts  StreamingService.ts  auth.ts  bufferConfig.ts  (+17 more)
design/: README.md  mprocs.yaml  package.json
design/Prerelease/: README.md  index.html  package.json  vite.config.ts
design/Release/: README.md  index.html  package.json  vite.config.ts
design/src/: App.tsx  main.tsx
docs/: 00-Architecture.md  01-Streaming-Protocol.md  Commit.md  History.md  INDEX.md  README.md  SUMMARY.md  Streaming Protocol.md  architecture.md  config.md  db-schema.md  graphql-schema.md  observability.md  product spec.md  relay.md  streaming-protocol.md  todo.md  ui-design-spec.md
docs/architecture/: 00-System-Overview.md  README.md
docs/client/: 01-Feature-Flags.md  README.md
docs/code-style/: README.md
docs/design/: README.md
docs/diagrams/: streaming-01-initial-playback.mmd  streaming-02-backpressure.mmd  streaming-03-seek.mmd  streaming-04-resolution-switch.mmd
docs/migrations/: README.md
docs/product/: README.md
docs/release/: Outstanding-Work.md  README.md
docs/server/: 02-DB-Schema.md  README.md
landing/: index.html
scripts/: check-env.sh  check-sdl-parity.ts  clean.sh  ffmpeg-manifest.json  package.json  seq-start.sh  seq-stop.sh  setup-ffmpeg.ts  stop.sh  test-chunking.ts  tsconfig.json
seq/: .env.example  .gitignore  Caddyfile.template  README.md  docker-compose.yml  setup.sh
server/: eslint.config.js  package.json  schema.graphql
server-rust/: Cargo.toml  package.json  schema.graphql
server-rust/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  relay.rs  request_context.rs  telemetry.rs
server-rust/src/db/: migrate.rs  mod.rs
server-rust/src/db/queries/: films.rs  jobs.rs  libraries.rs  mod.rs  playback_history.rs  seasons.rs  segments.rs  show_metadata.rs  shows.rs  user_settings.rs  video_metadata.rs  videos.rs  watchlist.rs  wipe.rs
server-rust/src/graphql/: error_logger.rs  mod.rs  mutation.rs  query.rs  scalars.rs  subscription.rs  types.rs
server-rust/src/graphql/types/: episode.rs  film.rs  library.rs  misc.rs  mod.rs  node.rs  omdb.rs  playback_session.rs  season.rs  show.rs  transcode_job.rs  video.rs  watchlist.rs
server-rust/src/routes/: graphql_http.rs  mod.rs  poster.rs  stream.rs
server-rust/src/services/: active_job.rs  auth.rs  cache_index.rs  chunker.rs  ffmpeg_file.rs  ffmpeg_path.rs  ffmpeg_pool.rs  fmp4_tail_reader.rs  hw_accel.rs  job_restore.rs  job_store.rs  kill_reason.rs  library_scanner.rs  mod.rs  omdb.rs  poster_cache.rs  profile_availability.rs  scan_state.rs  tv_discovery.rs  wipe.rs
server-rust/tests/: cascade_integration.rs  graphql_integration.rs
server/src/: config.ts  index.ts  telemetry.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/src/: ffmpeg_path.rs  lib.rs  main.rs  server_supervisor.rs
(+772 files in other folders)
