[package]
name = "xstream-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
# Web
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "fs", "process", "time", "io-util"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1"
async-trait = "0.1"
futures-util = "0.3"

# Telemetry — Bun ships traces+logs via OTLP/HTTP protobuf to Seq at
# http://localhost:5341/ingest/otlp; the Rust port matches that.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client", "trace"] }
opentelemetry-http = "0.27"
tracing-opentelemetry = "0.28"

# GraphQL — async-graphql with axum integration. graphql-ws subprotocol
# is supported via async-graphql-axum::GraphQLSubscription.
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Concurrency primitives — chunker job map, dying-set sweep
dashmap = "6"

# File watcher — chunker segment notifications
notify = "7"

# POSIX signals — chunker SIGTERM/SIGKILL escalation on Unix
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

# Misc utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
thiserror = "2"
sha1 = "0.10"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"

