[package]
name = "xstream-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
# Two binaries live in this crate — xstream-server (the runtime) and
# print_schema (a build-time GraphQL SDL emitter). Pin the default so
# `cargo run` from package scripts targets the runtime without needing
# --bin everywhere.
default-run = "xstream-server"

[dependencies]
# Web
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "fs", "process", "time", "io-util"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1"
async-trait = "0.1"
futures-util = "0.3"

# Telemetry — traces + logs over OTLP/HTTP protobuf to Seq at
# http://localhost:5341/ingest/otlp.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client", "trace"] }
opentelemetry-http = "0.27"
tracing-opentelemetry = "0.28"

# GraphQL — async-graphql with axum integration. graphql-ws subprotocol
# is supported via async-graphql-axum::GraphQLSubscription.
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Concurrency primitives — chunker job map, dying-set sweep
dashmap = "6"

# File watcher — chunker segment notifications
notify = "7"

# Library scanner — recursive directory walk
walkdir = "2"
hex = "0.4"

# OMDb auto-match — outbound HTTP. rustls-tls (not native-tls) so the
# Tauri bundle has no per-platform OpenSSL dependency.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Supabase JWT verification — RS256 via JWKS. We hold only public keys;
# no shared secrets ship in the bundle.
jsonwebtoken = "9.3"

# Poster resize + WebP encode. `image` decodes JPEG/PNG/WebP/GIF (no
# AVIF — avoids a native libavif dep); `webp` wraps libwebp for fast
# q75 lossy encoding. Used by services::poster_cache.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
webp = { version = "0.3", default-features = false }

# POSIX signals — chunker SIGTERM/SIGKILL escalation on Unix
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

# Misc utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
thiserror = "2"
sha1 = "0.10"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io"] }

[features]
default = []
# Compile in dev-only surfaces (trace history table, GraphQL resolvers
# that read/write it). Prod artifacts are built without this; the
# matching frontend strip lives behind PUBLIC_XSTREAM_DEV_FEATURES.
dev-features = []

[dev-dependencies]
tempfile = "3"
# Local HTTP mock server for omdb tests — lets us assert the
# True/False/network-error branches without hitting the live API.
wiremock = "0.6"

